# AgentID

./: .gitignore  README.md  main.py  policy.db  policy_dashboard.py  query_dashboard.py  requirements.txt  smoke.py
acme_bank_api/: README.md  package-lock.json  package.json  tsconfig.json
acme_bank_api/public/: app.js  index.html  styles.css
acme_bank_api/src/: app.ts  index.ts
acme_bank_api/src/controller/: accountController.ts
acme_bank_api/src/middleware/: authMiddleware.ts
acme_bank_api/src/model/: Account.ts
acme_bank_api/src/service/: accountService.ts  authService.ts
acme_bank_api/src/util/: errors.ts  helper.ts  jwt.ts
admin-panel/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
admin-panel/public/: index.html
admin-panel/src/: App.js  index.css  mockData.js
admin-panel/src/components/: Card.js  Header.js  ModernTable.js  SessionDetails.js  SessionsList.js  StatusBadge.js  TimeInfo.js  ToolRequestsTable.js
aligned-execution-engine/: CLAUDE.md  HELP.md  pom.xml  run_mcp_server.sh
demo/: HELP.md  pom.xml
fake-store-api/: README.md
friendly-ui-replicator-clone/: README.md
idv-mcp/: HELP.md  pom.xml
psql_db/: docker-compose.yml
psql_db/db/: schema.sql
psql_db/postgres-data/global/: 1260  1260_vm  1262  2671  (+3 more)
store-mcp/: main.py  pyproject.toml  requirements.txt
store-mcp/src/api/: store_api.py
store-mcp/src/mcp/: store_mcp.py
store-mcp/src/service/: store_query.py
visual-clone-ui-wizard/: index.html  package.json  vite.config.ts
weather-mcp/weather/: pyproject.toml  test_mcp.py  weather.py
(+273 files in other folders)
